--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/einsy-dev/Blog.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/einsy-dev/Blog/issues"
+  },
+  "homepage": "https://github.com/einsy-dev/Blog#readme",
+  "description": ""
 }
