--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22
-      - run: npm i
-      - run: npm run build
+      # - name: setup node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 22
+      # - run: npm i
+      # - run: npm run build
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
